<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/habit"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/habitInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editDate"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/habitInput"
        android:inputType="text"
        android:layout_below="@+id/editDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addNew"
        android:id="@+id/addNew"
        android:layout_marginTop="52dp"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp"
        android:layout_below="@+id/sunday"
        android:layout_alignRight="@+id/habitInput"
        android:layout_alignEnd="@+id/habitInput" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel"
        android:layout_alignTop="@+id/addNew"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:id="@+id/monday"
        android:checked="false"
        android:layout_below="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Day(s) of Week"
        android:id="@+id/textView3"
        android:layout_marginTop="67dp"
        android:autoText="false"
        android:background="#58cbfd"
        android:textAlignment="center"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:id="@+id/tuesday"
        android:checked="false"
        android:layout_toEndOf="@+id/textView2"
        android:layout_below="@+id/monday"
        android:layout_alignLeft="@+id/monday"
        android:layout_alignStart="@+id/monday" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:id="@+id/wednesday"
        android:checked="false"
        android:layout_below="@+id/tuesday"
        android:layout_alignRight="@+id/thursday"
        android:layout_alignEnd="@+id/friday" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:id="@+id/thursday"
        android:checked="false"
        android:layout_below="@+id/wednesday"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignEnd="@+id/friday" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:id="@+id/friday"
        android:checked="false"
        android:layout_below="@+id/thursday"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/saturday" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        android:id="@+id/saturday"
        android:checked="false"
        android:layout_below="@+id/friday"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        android:id="@+id/sunday"
        android:checked="false"
        android:layout_below="@+id/saturday"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>